# saikyo

./: .gitignore  README.md
src/convolution/: and_convolution.hpp  or_convolution.hpp  xor_convolution.hpp  zeta_mobius_transform.hpp
src/data_structure/: binary_trie.hpp  convex_hull_trick.hpp  doubling.hpp  matrix.hpp  matrix_bool.hpp  segment_tree.hpp  sorted_array.hpp
src/graph/: bfs.hpp  connected_components.hpp  dfs.hpp  graph.hpp  grid.hpp  minimum_spanning_tree.hpp  shortest_path.hpp  to_bipartite_graph.hpp  topological_sort.hpp  weighted_graph.hpp
src/graph/search/: bfs.hpp  dfs.hpp  dfs_all.hpp
src/graph/shortest_path/: general.hpp  non_negative.hpp  unweighted.hpp
src/graph/tree/: diameter.hpp  euler_tour.hpp  lowest_common_ancestor.hpp
src/math_utils/: digits.hpp  log2.hpp  overflow.hpp  radix.hpp
src/misc/: coordinate_compression.hpp  cumulative_sum.hpp  find_cycle.hpp  knapsack.hpp  linearly_reccurent_sequence.hpp  longest_increasing_subsequence.hpp  math_utils.hpp  run_length_encoding.hpp
src/number_theory/: enumerate_divisors.hpp  extended_gcd.hpp  factorial.hpp  prime_factorization.hpp  sieve.hpp  sieve_eratosthenes.hpp
src/string/: rolling_hash.hpp
src/templates/: binary_search.cpp  brute_force.cpp
src/vector/: lexicographical_sort.hpp
test/: CMakeLists.txt  README.md
test/convolution/: CMakeLists.txt  and_convolution_test.cpp  or_convolution_test.cpp  xor_convolution_test.cpp  zeta_mobius_transform_test.cpp
test/data_structure/: CMakeLists.txt  binary_trie_test.cpp  convex_hull_trick_test.cpp  doubling_test.cpp  matrix_test.cpp  sorted_array_test.cpp
test/graph/: CMakeLists.txt  connected_components_test.cpp  minimum_spanning_tree_test.cpp  testcase_generators.hpp  to_bipartite_graph_test.cpp  topological_sort_test.cpp
test/graph/search/: CMakeLists.txt  bfs_test.cpp  dfs_all_test.cpp  dfs_test.cpp
test/graph/shortest_path/: CMakeLists.txt  general_test.cpp  non_negative_test.cpp  unweighted_test.cpp
test/graph/tree/: CMakeLists.txt  diameter_test.cpp  euler_tour_test.cpp  lowest_common_ancestor_test.cpp
test/math_utils/: CMakeLists.txt  digits_test.cpp  log2_test.cpp  overflow_test.cpp  radix_test.cpp
test/misc/: CMakeLists.txt  coordinate_compression_test.cpp
test/number_theory/: CMakeLists.txt  enumerate_divisors_test.cpp  extended_gcd_test.cpp  factorial_test.cpp  prime_factorization_test.cpp  sieve_eratosthenes_test.cpp  sieve_test.cpp
test/string/: CMakeLists.txt  rolling_hash_test.cpp
test/vector/: CMakeLists.txt  cumulative_sum_test.cpp  lexicographical_sort_test.cpp  longest_increasing_subsequence_test.cpp  run_length_encoding.cpp
utils/: init_contest.py
utils/checker/: check_impl.py  example.py  generators.py  io.py  print_utils.py  program.py  testcases.py
utils/templates/: Makefile  atcoder_main.cpp  check.py  generator_template.py  local_debug.hpp  local_test.py  run.sh  testcases.yaml
