add_subdirectory(search)
add_subdirectory(shortest_path)
add_subdirectory(tree)

add_executable(connected_components_test connected_components_test.cpp)
target_link_libraries(connected_components_test GTest::gtest_main)
gtest_discover_tests(connected_components_test)

add_executable(minimum_spanning_tree_test minimum_spanning_tree_test.cpp)
target_link_libraries(minimum_spanning_tree_test GTest::gtest_main)
gtest_discover_tests(minimum_spanning_tree_test)

add_executable(to_bipartite_graph_test to_bipartite_graph_test.cpp)
target_link_libraries(to_bipartite_graph_test GTest::gtest_main)
gtest_discover_tests(to_bipartite_graph_test)

add_executable(topological_sort_test topological_sort_test.cpp)
target_link_libraries(topological_sort_test GTest::gtest_main)
gtest_discover_tests(topological_sort_test)
